--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 
+<form th:method="PATCH" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
+    <label for="name">Enter name: </label>
+    <input type="text" th:field="*{name}" id = "name">
+    <div style="color: red" th:if="${#fields.hasErrors()}" th:errors="*{name}">Name error</div>
+    <br/>
+    <label for="age">Enter year: </label>
+    <input type="text" th:field="*{age}" id = "age">
+    <div style="color: red" th:if="${#fields.hasErrors()}" th:errors="*{age}">Age error</div>
+</form>
 </body>
 </html>
