Fixed bugs in Person and Book views

--- a/src/main/webapp/WEB-INF/views/books/new.html
+++ b/src/main/webapp/WEB-INF/views/books/new.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create a new book</title>
 </head>
 <body>
+<form th:method="POST" th:action="@{/books}" th:object="${book}">
+    <label for="book_name">Enter book name</label>
+    <input type="text" th:field="*{book_name}" id="book_name">
+    <div style="color: red" th:if="${#fields.hasErrors('book_name')}" th:errors="*{book_name}">Book name error</div>
+    <br/>
+    <label for="author">Enter author</label>
+    <input type="text" th:field="*{author}" id="author">
+    <div style="color: red" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">Author error</div>
+    <br/>
+    <label for="year">Enter year</label>
+    <input type="text" th:field="*{year}" id="year">
+    <div style="color: red" th:if="${#fields.hasErrors('year')}" th:errors="*{year}">Year error</div>
+    <input type="submit" value="Create">
+</form>
 
 </body>
 </html>
