--- a/src/main/webapp/WEB-INF/views/books/edit.html
+++ b/src/main/webapp/WEB-INF/views/books/edit.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edit book</title>
 </head>
 <body>
+<form th:method="PATCH" th:action="@{/books/{id}(id=${book.getId()})}" th:object="${book}">
+    <label for="book_name">Enter name</label>
+    <input type="text" th:field="*{book_name}" id="book_name">
+    <div style="color: red" th:if="${#fields.hasErrors()}" th:errors="*{book_name}">Book name error</div>
+    <br/>
+    <label for="author">Enter age</label>
+    <input type="text" th:field="*{author}" id="author">
+    <div style="color: red" th:if="${#fields.hasErrors()}" th:errors="*{author}">Author error</div>
+    <br/>
+    <label for="author">Enter year</label>
+    <input type="text" th:field="*{year}" id="year">
+    <div style="color: red" th:if="${#fields.hasErrors()}" th:errors="*{year}">Year error</div>
+    <input type="submit" value="Edit">
 
+</form>
 </body>
 </html>
