--- a/src/main/webapp/WEB-INF/views/books/index.html
+++ b/src/main/webapp/WEB-INF/views/books/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Book</title>
 </head>
 <body>
-
+<div th:each="book :${books}">
+    <a th:href="@{books/{id}(id=${book.getId()})}" th:text="${book.getBook_name() + ', ' + book.getAuthor() + ', ' + book.getYear()}"></a>
+</div>
+<a href = "/Library_Spring_war_exploded/books/new">Create new book</a>
 </body>
 </html>
