--- a/src/main/webapp/WEB-INF/views/books/edit.html
+++ b/src/main/webapp/WEB-INF/views/books/edit.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <form th:method="PATCH" th:action="@{/books/{id}(id=${book.getId()})}" th:object="${book}">
-    <label for="book_name">Enter name</label>
-    <input type="text" th:field="*{book_name}" id="book_name">
-    <div style="color: red" th:if="${#fields.hasErrors()}" th:errors="*{book_name}">Book name error</div>
+    <label for="title">Enter name</label>
+    <input type="text" th:field="*{title}" id="title">
+    <div style="color: red" th:if="${#fields.hasErrors()}" th:errors="*{title}">Book name error</div>
     <br/>
     <label for="author">Enter age</label>
     <input type="text" th:field="*{author}" id="author">
