--- a/src/main/webapp/WEB-INF/views/books/index.html
+++ b/src/main/webapp/WEB-INF/views/books/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:each="book :${books}">
-    <a th:href="@{books/{id}(id=${book.getId()})}" th:text="${book.getBook_name() + ', ' + book.getAuthor() + ', ' + book.getYear()}"></a>
+    <a th:href="@{books/{id}(id=${book.getId()})}" th:text="${book.getTitle() + ', ' + book.getAuthor() + ', ' + book.getYear()}"></a>
 </div>
 <a href = "/Library_Spring_war_exploded/books/new">Create new book</a>
 </body>
