--- a/src/main/webapp/WEB-INF/views/books/new.html
+++ b/src/main/webapp/WEB-INF/views/books/new.html
@@ -7,8 +7,8 @@
 <body>
 <form th:method="POST" th:action="@{/books}" th:object="${book}">
     <label for="book_name">Enter book name</label>
-    <input type="text" th:field="*{book_name}" id="book_name">
-    <div style="color: red" th:if="${#fields.hasErrors('book_name')}" th:errors="*{book_name}">Book name error</div>
+    <input type="text" th:field="*{title}" id="book_name">
+    <div style="color: red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Book name error</div>
     <br/>
     <label for="author">Enter author</label>
     <input type="text" th:field="*{author}" id="author">
