Updated project to JPA & added new functionality

--- a/src/main/resources/templates/people/index.html
+++ b/src/main/resources/templates/people/index.html
@@ -10,7 +10,7 @@
        th:text="${person.getName() + ', ' + person.getAge()}">user</a>
 </div>
 
-<a href = "/Library_Spring_war_exploded/people/new">Create new person</a>
+<a href = "/people/new">Create new person</a>
 
 </body>
 </html>
