--- a/src/main/resources/templates/books/index.html
+++ b/src/main/resources/templates/books/index.html
@@ -8,6 +8,6 @@
 <div th:each="book :${books}">
     <a th:href="@{books/{id}(id=${book.getId()})}" th:text="${book.getTitle() + ', ' + book.getAuthor() + ', ' + book.getYear()}"></a>
 </div>
-<a href = "/Library_Spring_war_exploded/books/new">Create new book</a>
+<a href = "/books/new">Create new book</a>
 </body>
 </html>
